@@ -1,3 +1,9 @@
+2009-04-29  Richard Guenther  <rguenther@suse.de>
+
+	* tree-cfg.c (verify_types_in_gimple_reference): Add require_lvalue
+	parameter.  Allow invariants as base if !require_lvalue.
+	(verify_gimple_assign_single): Adjust.
+
 2009-04-29  Bernd Schmidt  <bernd.schmidt@analog.com>
 
 	* config/bfin/bfin.md (sp_or_sm, spm_string, spm_name): New macro.
